2007-05-27  Pawel Salek

	* src/sendmsg-window.c: Do not wrap for view, if flowed format is
	selected (Albrecht Dreß). 
	* src/balsa-index.c: extend msgno and size columns.
	* libbalsa/mailbox_imap.c: silence few devel warnings.
	* NEWS, configure.in: release 2.3.16.

2007-05-21  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_get_index_entry_expunged_cb),
	(lbm_get_index_entry): catch expunged and renumbered messages.
	* src/message-window.c: (message_window_move_message),
	(mw_set_selected): check BalsaIndex::current_msgno instead of
	BalsaIndex::current_message.

2007-05-11  Peter Bloomfield

	* libbalsa/html.c: (libbalsa_html_print),
	(libbalsa_html_print_get_pages_num): build on fc6, and on f7test
	--without-gtkprint.
	* libbalsa/html.h: ditto.

2007-05-10  Peter Bloomfield

	* libbalsa/mailbox_mh.c: (libbalsa_mailbox_mh_sync): rename
	message files correctly.
	* libbalsa/mailbox_local.c: (lbm_local_save_tree),
	(libbalsa_mailbox_local_close_mailbox): really check for empty
	tree; always save tree on closing.

2007-05-09  Albrecht Dreß

	* libbalsa/identity.h: add request_mdn field (request MDN by
	default).
	* libbalsa/identity.c: (libbalsa_identity_init),
	(setup_ident_frame), (ident_dialog_update), (display_frame_update),
	(libbalsa_identity_new_config), (libbalsa_identity_save): manage
	it.
	* src/sendmsg-window.c: (update_bsmsg_identity): use it.

2007-05-07  Peter Bloomfield

	* libbalsa/misc.c: (libbalsa_set_fallback_codeset): allocate the
	charset strings.
	* libbalsa/mailbox_local.c: (libbalsa_mailbox_local_get_message):
	check msgno.
	* src/balsa-index.c: (bndx_change_flags), (bndx_tree_expand_cb):
	ditto.
	* libbalsa/misc.c: (libbalsa_set_fallback_codeset): include
	UTF-8 as a charset.
	* src/balsa-message.c: (mdn_dialog_response): do not clear NULL
	error.

2007-05-06  Albrecht Dreß

	* configure.in: add HTML flags and libs.

2007-05-06  Peter Bloomfield

	* libbalsa/html.h: compile with GtkHtml3 and GtkPrint.