@@ -1,3 +1,8 @@
+2007-05-28  Peter Bloomfield
+
+	* libbalsa/imap/pop3.c: (pop_get_uid): check for disconnection
+	to avoid a failed assertion.
+
 2007-05-27  Pawel Salek
 
 	* src/sendmsg-window.c: Do not wrap for view, if flowed format is
